Fix for non visible click to call widget for PIRATE-4944

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -130,6 +130,13 @@
     }
 }
 
+
+.template-header .clicktocall__phone-number-link,
+.template-header .clicktocall__phone-number-link:hover {
+    color: @color__navigation--text;
+}
+
+
 // Editor Navigation Overlay Settings
 [data-widget-type="clicktocall"] .widget-overlay .widget__list {
    @media @mobile {
@@ -160,9 +167,9 @@
 // Navigation Toggle Button
 @media @tablet {
     .navigation-toggle {
+        background-color: transparent;
         display: block;
         overflow: hidden;
-        width: 100%;
         height: 45px;
         text-indent: -9999px;
         line-height: 0;
@@ -177,10 +184,10 @@
             width: 26px;
             height: 3px;
             top: 0;
-            left: 2%;
+            left: 0;
             right: 0;
             margin-top: 15px;
-            margin-left: -13px;
+            margin-left: 0;
             background: #ffffff;
             box-shadow: 0 6px 0 #ffffff;
             .transition( all, 0.5s, ease );
@@ -191,10 +198,10 @@
             width: 26px;
             height: 3px;
             top: 12px;
-            left: 2%;
+            left: 0;
             right: 0;
             margin-top: 15px;
-            margin-left: -13px;
+            margin-left: 0;
             background: #ffffff;
             .transition( all, 0.5s, ease );
         }
@@ -231,10 +238,10 @@
                 width: 26px;
                 height: 3px;
                 top: 0;
-                left: 2%;
+                left: 0;
                 right: 0;
                 margin-top: 21px;
-                margin-left: -13px;
+                margin-left: 0;
                 background: #ffffff;
                 box-shadow: none;
                 -webkit-transform: rotate(-45deg);
@@ -256,25 +263,5 @@
     }
     .navigation-item {
         width: 100%;
-    }
-}
-
-@media @mobile {
-    .navigation-toggle {
-
-    	&:before {
-    		left: 4%;
-    	}
-
-    	&:after {
-    		left: 4%;
-    	}
-    }
-    .open & {
-        &.navigation-toggle {
-            &:after {
-                left: 4%;
-            }
-        }
     }
 }
